fix: move index.html to root

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Portifólio</title>
 </head>
 <body>
-    <img src="assents/images/foto.jpeg" alt="Foto de perfil. "/>
+    <img src="html/assents/images/foto.jpeg" alt="Foto de perfil. "/>
     <h1>Meu nome é Eduardo</h1>
     <h2>Desenvolvedor Full Stack</h2>
     <p>Gosto de criar sistemas completos e sites para <i>internet</i><br /> do <strong>backend ao frontend</strong>, buscando soluções eficientes.</p>
