feat: add challenges 2 and 3

--- a/html/exercicios/desafio2.html
+++ b/html/exercicios/desafio2.html
@@ -11,6 +11,57 @@
     <h1>Cafeteria EDV</h1>
     <h2>Cardápio</h2>
 
+
+    <table border="1px" cellspacing="0" cellpadding="10">
+        <thead>
+            <th>
+                Horários
+            </th>
+            <th>
+                Segunda
+            </th>
+            <th>
+                Terça
+            </th>
+            <th>
+                Quarta
+            </th>
+            <th>
+                Quinta
+            </th>
+            <th>
+                Sexta
+            </th>
+            <th>
+                Sábado
+            </th>
+            <th>
+                Domingo e <br />Feriados
+            </th>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td><strong>Manha</strong></td>
+                <td>08:00<br />12:00</td>
+                <td rowspan="2">Fechado</td>
+                <td>08:00<br />12:00</td>
+                <td>08:00<br />12:00</td>
+                <td>08:00<br />12:00</td>
+                <td>08:00<br />12:00</td>
+                <td rowspan="2">08:00<br />12:00</td>
+            <tr>
+                <td><strong>Tarde</strong></td>
+                <td>14:00 <br />18:00</td>
+                <td>14:00 <br />18:00</td>
+                <td>14:00 <br />18:00</td>
+                <td>14:00 <br />18:00</td>
+                <td>14:00 <br />18:00</td>
+            </tr>
+        </tbody>
+    </table>
+
+
     <ul>
         <li>
             <h3>Bebidas</h3>
