--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <a href="https://www.linkedin.com/in/eduardo-vinicius-jorge/">Linkedin</a>
     <a href="https://github.com/EduardoViniciusJ">Github</a>
     <a href="html/exercicios/desafio2.html" target="_blank">Cafeteria EDV</a>
+    <a href="html/exercicios/desafio3-livraria-store.html" target="_blank">Livraria Store</a>
+
 </body>
 
 </html>
