feat: add challenge 4 and form class notes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         buscando soluções eficientes.</p>
 
     <a href="https://www.linkedin.com/in/eduardo-vinicius-jorge/">Linkedin</a>
+    <br />
     <a href="https://github.com/EduardoViniciusJ">Github</a>
-    <a href="html/exercicios/desafio2.html" target="_blank">Cafeteria EDV</a>
+    <br />
+    <a href="html/exercicios/desafio2-cafeteria.html" target="_blank">Cafeteria EDV</a>
+    <br />
+    <a href="html/exercicios/desafio4-form-cafeteria.html" target="_blank">Contato Cafeteria</a>
+    <br />
     <a href="html/exercicios/desafio3-livraria-store.html" target="_blank">Livraria Store</a>
 
 </body>
