--- a/html/exercicios/desafio2-cafeteria.html
+++ b/html/exercicios/desafio2-cafeteria.html
@@ -94,6 +94,8 @@
         </li>
     </ul>
 
+    <a href="desafio4-form-cafeteria.html" target="_blank">Contanto</a>
+    <br />
     <a href="https://eduardoviniciusj.github.io/alpar" target="_blank">Portfólio</a>
 
 </body>
