feat: add challenge 2 css profile card

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <li><a href="html-css/cafeteria/index.html" target="_blank">Cafeteria EDV</a></li>
                         <li><a href="html-css/livraria-store-table/index.html" target="_blank">Livraria Store</a></li>
                         <li><a href="html-css/podcast/index.html" target="_blank">Podcast</a></li>
+                        <li><a href="html-css/card/index.html" target="_blank">Card</a></li>
                     </ul>
                 </div>
             </div>
