feat: add challenge 4 and 5 css

--- a/html-css/livraria-store-table/index.html
+++ b/html-css/livraria-store-table/index.html
@@ -4,348 +4,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../livraria-store-table/assets/css/index.css">
     <title>Livraria Store</title>
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="https://eduardoviniciusj.github.io/alpar" target="_blank">Portfólio</a></li>
-            </ul>
+        <nav class="header-navbar">
+            <h1>Livraria Store</h1>
         </nav>
     </header>
 
-    <!-- COLOQUEI TUDO DENTRO DO MAIN -->
+    <aside>
+        <ul class="nav-links">
+            <li><a href="https://eduardoviniciusj.github.io/alpar" target="_blank">Portfólio</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Livros</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Sair</a></li>
+        </ul>
+    </aside>
+
     <main>
 
-        <table border="1" width="100%" cellspacing="0" cellpadding="8">
-            <thead>
-                <tr>
-                    <th colspan="4">
-                        <h1>Livraria Store</h1>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Título</th>
-                    <th>Autor</th>
-                    <th>Gênero</th>
-                    <th>Preço</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td>Livro 1</td>
-                    <td>Autor 1</td>
-                    <td>Romance</td>
-                    <td>R$ 39,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 2</td>
-                    <td>Autor 2</td>
-                    <td>Fantasia</td>
-                    <td>R$ 49,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 3</td>
-                    <td>Autor 3</td>
-                    <td>Terror</td>
-                    <td>R$ 29,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 1</td>
-                    <td>Autor 1</td>
-                    <td>Romance</td>
-                    <td>R$ 39,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 2</td>
-                    <td>Autor 2</td>
-                    <td>Fantasia</td>
-                    <td>R$ 49,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 3</td>
-                    <td>Autor 3</td>
-                    <td>Terror</td>
-                    <td>R$ 29,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 4</td>
-                    <td>Autor 4</td>
-                    <td>Drama</td>
-                    <td>R$ 42,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 5</td>
-                    <td>Autor 5</td>
-                    <td>Aventura</td>
-                    <td>R$ 37,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 6</td>
-                    <td>Autor 6</td>
-                    <td>Ficção Científica</td>
-                    <td>R$ 59,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 7</td>
-                    <td>Autor 7</td>
-                    <td>Biografia</td>
-                    <td>R$ 33,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 8</td>
-                    <td>Autor 8</td>
-                    <td>História</td>
-                    <td>R$ 44,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 9</td>
-                    <td>Autor 9</td>
-                    <td>Autoajuda</td>
-                    <td>R$ 28,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 10</td>
-                    <td>Autor 10</td>
-                    <td>Programação</td>
-                    <td>R$ 89,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 11</td>
-                    <td>Autor 11</td>
-                    <td>Psicologia</td>
-                    <td>R$ 54,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 12</td>
-                    <td>Autor 12</td>
-                    <td>Educação</td>
-                    <td>R$ 39,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 13</td>
-                    <td>Autor 13</td>
-                    <td>Filosofia</td>
-                    <td>R$ 47,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 14</td>
-                    <td>Autor 14</td>
-                    <td>Negócios</td>
-                    <td>R$ 62,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 15</td>
-                    <td>Autor 15</td>
-                    <td>Marketing</td>
-                    <td>R$ 58,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 16</td>
-                    <td>Autor 16</td>
-                    <td>Finanças</td>
-                    <td>R$ 71,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 17</td>
-                    <td>Autor 17</td>
-                    <td>Saúde</td>
-                    <td>R$ 36,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 18</td>
-                    <td>Autor 18</td>
-                    <td>Esportes</td>
-                    <td>R$ 41,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 19</td>
-                    <td>Autor 19</td>
-                    <td>Arte</td>
-                    <td>R$ 53,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 20</td>
-                    <td>Autor 20</td>
-                    <td>Mistério</td>
-                    <td>R$ 45,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 1</td>
-                    <td>Autor 1</td>
-                    <td>Romance</td>
-                    <td>R$ 39,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 2</td>
-                    <td>Autor 2</td>
-                    <td>Fantasia</td>
-                    <td>R$ 49,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 3</td>
-                    <td>Autor 3</td>
-                    <td>Terror</td>
-                    <td>R$ 29,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 4</td>
-                    <td>Autor 4</td>
-                    <td>Drama</td>
-                    <td>R$ 42,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 5</td>
-                    <td>Autor 5</td>
-                    <td>Aventura</td>
-                    <td>R$ 37,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 6</td>
-                    <td>Autor 6</td>
-                    <td>Ficção Científica</td>
-                    <td>R$ 59,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 7</td>
-                    <td>Autor 7</td>
-                    <td>Biografia</td>
-                    <td>R$ 33,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 8</td>
-                    <td>Autor 8</td>
-                    <td>História</td>
-                    <td>R$ 44,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 9</td>
-                    <td>Autor 9</td>
-                    <td>Autoajuda</td>
-                    <td>R$ 28,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 10</td>
-                    <td>Autor 10</td>
-                    <td>Programação</td>
-                    <td>R$ 89,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 11</td>
-                    <td>Autor 11</td>
-                    <td>Psicologia</td>
-                    <td>R$ 54,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 12</td>
-                    <td>Autor 12</td>
-                    <td>Educação</td>
-                    <td>R$ 39,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 13</td>
-                    <td>Autor 13</td>
-                    <td>Filosofia</td>
-                    <td>R$ 47,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 14</td>
-                    <td>Autor 14</td>
-                    <td>Negócios</td>
-                    <td>R$ 62,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 15</td>
-                    <td>Autor 15</td>
-                    <td>Marketing</td>
-                    <td>R$ 58,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 16</td>
-                    <td>Autor 16</td>
-                    <td>Finanças</td>
-                    <td>R$ 71,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 17</td>
-                    <td>Autor 17</td>
-                    <td>Saúde</td>
-                    <td>R$ 36,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 18</td>
-                    <td>Autor 18</td>
-                    <td>Esportes</td>
-                    <td>R$ 41,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 19</td>
-                    <td>Autor 19</td>
-                    <td>Arte</td>
-                    <td>R$ 53,90</td>
-                </tr>
-                <tr>
-                    <td>Livro 20</td>
-                    <td>Autor 20</td>
-                    <td>Mistério</td>
-                    <td>R$ 45,90</td>
-                </tr>
-            </tbody>
-
-            <tfoot>
-                <tr>
-                    <td colspan="4" align="center">
-                        Contato: (99) 99999-9999
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-
-        <table border="1" width="100%" cellspacing="0" cellpadding="8">
-
+        <table class="tabela-horarios">
             <thead>
                 <tr>
                     <th>Horários</th>
-                    <th>Segunda</th>
-                    <th>Terça</th>
-                    <th>Quarta</th>
-                    <th>Quinta</th>
-                    <th>Sexta</th>
-                    <th>Sábado</th>
-                    <th>Domingo e Feriados</th>
+                    <th>Seg</th>
+                    <th>Ter</th>
+                    <th>Qua</th>
+                    <th>Qui</th>
+                    <th>Sex</th>
+                    <th>Sáb</th>
+                    <th>Dom</th>
                 </tr>
             </thead>
-
             <tbody>
                 <tr>
                     <td><strong>Manhã</strong></td>
-                    <td>08:00<br>12:00</td>
-                    <td rowspan="2" align="center">Fechado</td>
-                    <td>08:00<br>12:00</td>
-                    <td>08:00<br>12:00</td>
-                    <td>08:00<br>12:00</td>
-                    <td>08:00<br>12:00</td>
-                    <td rowspan="2">08:00<br>12:00</td>
+                    <td>08:00 - 12:00</td>
+                    <td>Fechado</td>
+                    <td>08:00 - 12:00</td>
+                    <td>08:00 - 12:00</td>
+                    <td>08:00 - 12:00</td>
+                    <td>08:00 - 12:00</td>
+                    <td>08:00 - 12:00</td>
                 </tr>
-
                 <tr>
                     <td><strong>Tarde</strong></td>
-                    <td>14:00<br>18:00</td>
-                    <td>14:00<br>18:00</td>
-                    <td>14:00<br>18:00</td>
-                    <td>14:00<br>18:00</td>
-                    <td>14:00<br>18:00</td>
+                    <td>14:00 - 18:00</td>
+                    <td>Fechado</td>
+                    <td>14:00 - 18:00</td>
+                    <td>14:00 - 18:00</td>
+                    <td>14:00 - 18:00</td>
+                    <td>14:00 - 18:00</td>
+                    <td>14:00 - 18:00</td>
                 </tr>
             </tbody>
-
         </table>
 
+        <div class="livros-container">
+            <table class="tabela-livros">
+                <thead>
+                    <tr>
+                        <th>Título</th>
+                        <th>Autor</th>
+                        <th>Gênero</th>
+                        <th>Preço</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Livro 1</td>
+                        <td>Autor 1</td>
+                        <td>Romance</td>
+                        <td>R$ 39,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 2</td>
+                        <td>Autor 2</td>
+                        <td>Fantasia</td>
+                        <td>R$ 49,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 3</td>
+                        <td>Autor 3</td>
+                        <td>Terror</td>
+                        <td>R$ 29,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 4</td>
+                        <td>Autor 4</td>
+                        <td>Drama</td>
+                        <td>R$ 42,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 5</td>
+                        <td>Autor 5</td>
+                        <td>Aventura</td>
+                        <td>R$ 37,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 6</td>
+                        <td>Autor 6</td>
+                        <td>Finanças</td>
+                        <td>R$ 71,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 7</td>
+                        <td>Autor 7</td>
+                        <td>Saúde</td>
+                        <td>R$ 36,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 8</td>
+                        <td>Autor 8</td>
+                        <td>Esportes</td>
+                        <td>R$ 41,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 9</td>
+                        <td>Autor 9</td>
+                        <td>Arte</td>
+                        <td>R$ 53,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 10</td>
+                        <td>Autor 10</td>
+                        <td>Mistério</td>
+                        <td>R$ 45,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 11</td>
+                        <td>Autor 11</td>
+                        <td>História</td>
+                        <td>R$ 52,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 12</td>
+                        <td>Autor 12</td>
+                        <td>Ficção</td>
+                        <td>R$ 48,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 13</td>
+                        <td>Autor 13</td>
+                        <td>Biografia</td>
+                        <td>R$ 39,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 14</td>
+                        <td>Autor 14</td>
+                        <td>Psicologia</td>
+                        <td>R$ 59,90</td>
+                    </tr>
+                    <tr>
+                        <td>Livro 15</td>
+                        <td>Autor 15</td>
+                        <td>Negócios</td>
+                        <td>R$ 62,90</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </main>
+
+    <footer class="site-footer">
+        <p>&copy; 2026 - Eduardo Vinicius Jorge</p>
+    </footer>
 
 </body>
 
