--- a/html-css/livraria-store-table/index.html
+++ b/html-css/livraria-store-table/index.html
@@ -19,10 +19,9 @@
     <aside>
         <ul class="nav-links">
             <li><a href="https://eduardoviniciusj.github.io/alpar" target="_blank">Portfólio</a></li>
-            <li><a href="#">Início</a></li>
             <li><a href="#">Livros</a></li>
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">Sair</a></li>
+            <li><a href="form-livraria.html"">Contato</a></li>
+            <li><a href=" #">Sair</a></li>
         </ul>
     </aside>
 
@@ -77,99 +76,102 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Livro 1</td>
-                        <td>Autor 1</td>
+                        <td><input type="checkbox"> Dom Casmurro</td>
+                        <td>Machado de Assis</td>
                         <td>Romance</td>
                         <td>R$ 39,90</td>
                     </tr>
                     <tr>
-                        <td>Livro 2</td>
-                        <td>Autor 2</td>
+                        <td><input type="checkbox"> O Senhor dos Anéis</td>
+                        <td>J.R.R. Tolkien</td>
                         <td>Fantasia</td>
-                        <td>R$ 49,90</td>
+                        <td>R$ 79,90</td>
                     </tr>
                     <tr>
-                        <td>Livro 3</td>
-                        <td>Autor 3</td>
-                        <td>Terror</td>
+                        <td><input type="checkbox"> Código Limpo</td>
+                        <td>Robert C. Martin</td>
+                        <td>Tecnologia</td>
+                        <td>R$ 89,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> O Pequeno Príncipe</td>
+                        <td>Antoine de Saint-Exupéry</td>
+                        <td>Drama</td>
                         <td>R$ 29,90</td>
                     </tr>
                     <tr>
-                        <td>Livro 4</td>
-                        <td>Autor 4</td>
-                        <td>Drama</td>
-                        <td>R$ 42,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 5</td>
-                        <td>Autor 5</td>
+                        <td><input type="checkbox"> Harry Potter e a Pedra Filosofal</td>
+                        <td>J.K. Rowling</td>
                         <td>Aventura</td>
-                        <td>R$ 37,90</td>
+                        <td>R$ 49,90</td>
                     </tr>
                     <tr>
-                        <td>Livro 6</td>
-                        <td>Autor 6</td>
+                        <td><input type="checkbox"> Pai Rico, Pai Pobre</td>
+                        <td>Robert Kiyosaki</td>
                         <td>Finanças</td>
-                        <td>R$ 71,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 7</td>
-                        <td>Autor 7</td>
-                        <td>Saúde</td>
-                        <td>R$ 36,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 8</td>
-                        <td>Autor 8</td>
-                        <td>Esportes</td>
-                        <td>R$ 41,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 9</td>
-                        <td>Autor 9</td>
-                        <td>Arte</td>
-                        <td>R$ 53,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 10</td>
-                        <td>Autor 10</td>
-                        <td>Mistério</td>
-                        <td>R$ 45,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 11</td>
-                        <td>Autor 11</td>
-                        <td>História</td>
-                        <td>R$ 52,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 12</td>
-                        <td>Autor 12</td>
-                        <td>Ficção</td>
-                        <td>R$ 48,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 13</td>
-                        <td>Autor 13</td>
-                        <td>Biografia</td>
-                        <td>R$ 39,90</td>
-                    </tr>
-                    <tr>
-                        <td>Livro 14</td>
-                        <td>Autor 14</td>
-                        <td>Psicologia</td>
                         <td>R$ 59,90</td>
                     </tr>
                     <tr>
-                        <td>Livro 15</td>
-                        <td>Autor 15</td>
+                        <td><input type="checkbox"> A Sutil Arte de Ligar o F*da-se</td>
+                        <td>Mark Manson</td>
+                        <td>Saúde</td>
+                        <td>R$ 42,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> Messi</td>
+                        <td>Guillem Balagué</td>
+                        <td>Esportes</td>
+                        <td>R$ 44,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> A História da Arte</td>
+                        <td>E.H. Gombrich</td>
+                        <td>Arte</td>
+                        <td>R$ 69,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> Sherlock Holmes</td>
+                        <td>Arthur Conan Doyle</td>
+                        <td>Mistério</td>
+                        <td>R$ 37,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> Sapiens</td>
+                        <td>Yuval Noah Harari</td>
+                        <td>História</td>
+                        <td>R$ 54,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> 1984</td>
+                        <td>George Orwell</td>
+                        <td>Ficção</td>
+                        <td>R$ 38,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> O Diário de Anne Frank</td>
+                        <td>Anne Frank</td>
+                        <td>Biografia</td>
+                        <td>R$ 34,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> Rápido e Devagar</td>
+                        <td>Daniel Kahneman</td>
+                        <td>Psicologia</td>
+                        <td>R$ 64,90</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"> Comece Pelo Porquê</td>
+                        <td>Simon Sinek</td>
                         <td>Negócios</td>
-                        <td>R$ 62,90</td>
+                        <td>R$ 57,90</td>
                     </tr>
                 </tbody>
             </table>
-        </div>
 
+            <div class="acoes-tabela">
+                <button class="btn-comprar">Comprar Selecionados</button>
+            </div>
+        </div>
     </main>
 
     <footer class="site-footer">
